# nem_modelling

./: .gitignore  README.md  pyproject.toml
.devcontainer/: devcontainer.json
source/nem_solver/: __init__.py  constants.py  documentation.md  losses.py  model.py  schemas.py  solver.py  timeseries.py
tests/: conftest.py  test_battery.py  test_losses.py  test_pwl_losses.py  test_schemas.py  test_single_region.py  test_timeseries.py  test_two_region.py
