[project]
name = "nem-modelling"
version = "0.1.0"
description = "National Electricity Market modelling"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "ruff>=0.6",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
