[project]
name = "nem-modelling"
version = "0.1.0"
description = "National Electricity Market modelling"
requires-python = ">=3.13"
dependencies = [
    "linopy>=0.6",
    "highspy>=1.10",
    "pydantic>=2.9",
    "pandas>=2.2",
    "numpy>=2.0",
    "xarray>=2024.10",
]

[dependency-groups]
dev = [
    "ruff>=0.6",
    "pytest>=8",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
pythonpath = ["source"]
testpaths = ["tests"]
